feat(retrieval): add FAISS-based IndexBuilder with build, search, and persistence

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,8 @@ docs/pythonToturialFile.md
 docs/javaToturialFile.md
 docs/uiToturialFile.md
 
+# DocumentLoader guidance and documentation
+data/DocumentLoader_Testing_Guide.md
+data/test_document_loader.py
+data/QUICK_REFERENCE.md
+
