feat(pipeline): update experiment configs and execution script

--- a/python/configs/exp2.yaml
+++ b/python/configs/exp2.yaml
@@ -8,7 +8,7 @@ experiment:
   version: "1.0.0"
 
 data:
-  dataset_path: "experiments/dataset2"
+  dataset_path: "experiments/datasets/text"
   train_split: 0.8
   val_split: 0.1
   test_split: 0.1
