--- a/python/pytest.ini
+++ b/python/pytest.ini
@@ -1,6 +1,9 @@
 [pytest]
 # Pytest configuration for AdaptiveMultimodalRAG
 
+# Make project root importable (IMPORTANT)
+pythonpath = .
+
 # Test discovery patterns
 python_files = test_*.py
 python_classes = Test*
